# couchbase-shell

./: .cbsh-example  .cbshrc  .dockerignore  .gitignore  CHANGELOG.md  CNAME  Cargo.toml  Dockerfile  LICENSE_AGREEMENT  NOTICES  README.md  cbsh.nuspec  config.toml  deny.toml  index.html  mydoc.json  query_wizard.nu  rust-toolchain.toml  test.txt  tree.out
.cbsh/: config
.cbsh/certs/: ca.pem  client.key  client.pem
.github/workflows/: .spellcheck.yml  .wordlist.txt  ci.yml  docs.yml  release.yml  tests.yml
cbsh/: Cargo.toml
cbsh/src/: main.rs
css/: materialize.min.css  site.css  style.css
docs/: build.sh  capella.adoc  cbenv.adoc  cloud.adoc  commands.adoc  couchbase.css  debugging.adoc  docs.html  exporting-data.adoc  importing-data.adoc  index.adoc  index.html  intro.adoc  query_autocomplete.adoc  quickstart.adoc  recipes.adoc  recipes.html  reference.adoc  release_notes.adoc  troubleshooting.adoc  use.adoc
docs/commands/: allow_ip.adoc  analytics.adoc  buckets.adoc  clusters.adoc  collections.adoc  columnar.adoc  credentials.adoc  doc.adoc  query.adoc  scopes.adoc  vector.adoc
docs/lib/: cb-docinfoprocessor.rb
docs/recipes/: exporting-data.adoc  faking-data.adoc  importing-data.adoc  index.html  managing_multiple_clusters.adoc  moving_data.adoc  recipes.html  register_cluster.adoc  similarity_search.adoc  simple_rag.adoc  useful-snippets.adoc
docs/sample_config/: default_config.nu  default_config_windows.nu  prompt_tests.nu
examples/capella-cluster-configs/: hosted.json  in_vpc.json
examples/cbsh-dotfiles/: capella-with-credentials  cloud-config  cloud-credentials  config  config-with-capella  credentials
examples/fake-templates/: order.tera  user.tera
examples/scripts/: buckets_ops_per_sec.nu  ci_scripts.nu  primary_indexes.nu
examples/writer-agent/: bot1_role.txt  bot2_role.txt  writer_agent.nu
js/: scroll.js
jupyter/: cbshkernel.py  kernel.json
nu_couchbase/: Cargo.toml
nu_couchbase/src/: config.rs  config_files.rs  lib.rs  plugin.rs  remote_cluster.rs  state.rs
nu_couchbase/src/cli/: allow_ip.rs  analytics_common.rs  analytics_datasets.rs  analytics_indexes.rs  analytics_links.rs  analytics_pending_mutations.rs  ask.rs  buckets.rs  buckets_builder.rs  buckets_drop.rs  buckets_flush.rs  buckets_get.rs  cbenv_cluster.rs  cbenv_llm.rs  cbenv_managed.rs  cbenv_project.rs  cbenv_register.rs  cbenv_scope.rs  cbenv_timeouts.rs  clusters.rs  clusters_create.rs  clusters_drop.rs  collections.rs  collections_create.rs  collections_drop.rs  columnar_clusters_create.rs  columnar_clusters_drop.rs  columnar_databases.rs  credentials.rs  ctrlc_future.rs  data.rs  data_stats.rs  fake_data.rs  health.rs  help.rs  organizations.rs  ping.rs  plugin_from_bson.rs  projects.rs  projects_drop.rs  (+14 more)
nu_couchbase/src/client/: cloud_json.rs  http_client.rs  http_handler.rs  kv.rs  kv_client.rs  llm_client.rs  protocol.rs  tls.rs
nu_plugin_couchbase/: Cargo.toml
nu_plugin_couchbase/src/: main.rs
query_autocomplete/: fields.nu  fields_tests.nu  format_query.nu  format_query_tests.nu  mod.nu  utils.nu
src/: cli_options.rs  config.rs  config_files.rs  default_context.rs  main.rs  remote_cluster.rs  state.rs  terminal.rs  tutorial.rs
src/cli/: addresses.rs  addresses_add.rs  addresses_drop.rs  allow_ip.rs  allowlists.rs  allowlists_add.rs  allowlists_drop.rs  analytics.rs  analytics_buckets.rs  analytics_common.rs  analytics_datasets.rs  analytics_dataverses.rs  analytics_indexes.rs  analytics_links.rs  analytics_pending_mutations.rs  asdf  ask.rs  buckets.rs  buckets_builder.rs  buckets_config.rs  buckets_create.rs  buckets_drop.rs  buckets_flush.rs  buckets_get.rs  buckets_sample.rs  buckets_update.rs  cbenv_ai.rs  cbenv_bucket.rs  cbenv_capella_organization.rs  cbenv_cloud.rs  cbenv_cluster.rs  cbenv_cmd.rs  cbenv_collection.rs  cbenv_database.rs  cbenv_llm.rs  cbenv_managed.rs  cbenv_project.rs  cbenv_register.rs  cbenv_scope.rs  cbenv_timeouts.rs  (+116 more)
src/cli/fake_data/: mod.rs
src/client/: bedrock_client.rs  cloud.rs  cloud_json.rs  codec.rs  connection_client.rs  crc.rs  error.rs  gemini_client.rs  http_client.rs  http_handler.rs  kv.rs  kv_client.rs  llm_client.rs  mod.rs  openai_client.rs  protocol.rs  query_metadata.rs  tls.rs
src/ui/: mod.rs
tests/: README.md  buckets_create_update.rs  buckets_sample.rs  collections.rs  doc_get.rs  doc_import.rs  doc_insert.rs  doc_remove.rs  doc_replace.rs  doc_upsert.rs  query.rs  query_advise.rs  query_indexes.rs  scopes.rs  vector_create_index.rs
tests/common/: config.rs  error.rs  mod.rs  playground.rs  utils.rs
tests/common/support/: fs.rs  macros.rs  mod.rs
tests/integration/: main.rs  test_functions.rs
tests/integration/support/: fs.rs  macros.rs  mod.rs
tests/integration/testgenerator/: main.go
tests/integration/tests/: doc_get.rs  doc_insert.rs  doc_remove.rs  doc_upsert.rs  mod.rs  query.rs  query_advise.rs  query_indexes.rs
ui/: package-lock.json  package.json
ui-assets/: app-standalone.css  app-standalone.js  index-tutorial.html  index.html  mn_focus_me.js  qw_constants_service.js  qw_constants_service_standalone.js  qw_doc_editor_controller.js  qw_fix_long_number_service.js  qw_focus_me.js  qw_json_csv_service.js  qw_query_controller.js  qw_query_monitor_controller.js  qw_query_plan_service.js  qw_query_service.js  tutorial.html
ui-assets/app-standalone/: app.js  app_config.js  copyUIstuff.sh
ui-assets/libs/: vkbeautify.js
ui-assets/libs-standalone/: angular-ui-router-1.0.0-rc.1.js  angular-uib-modal.js  angular-uib-spock.js  angular-uib-tooltip.js  beautify.js  codemirror.css  copyLibs.sh
ui-assets/long_press/: qw-long-press.directive.js
ui-assets/n1ql_parser/: n1ql-validator.js  n1ql.jison  n1ql.js  window_queries.n1ql
ui-assets/tutorial/: copySlides.sh  tutorial.css  tutorial.html  tutorial.js
ui-assets/ui-current/: doc_editor.html  head.frag.html  query.css  query.html  query.js  query_monitoring.html  query_toplevel.html
ui/src/: App.vue  main.js
utilities/: Cargo.toml
utilities/src/: json_row_parser.rs  json_row_stream.rs  lib.rs  raw_json_row_streamer.rs
(+371 files in other folders)
