[package]
name = "couchbase-shell"
version = "0.75.0"
authors = ["Charles Dixon <chvckd@gmail.com>"]
edition = "2018"
default-run = "cbsh"

[dependencies]
ansi_term = "0.12"
async-stream = "0.3.3"
async-trait = "0.1.31"
base64 = "0.13.0"
bytes = "1.0"
chrono = { version = "0.4.11", features = ["serde"] }
ctrlc = "3.2.1"
dirs = "4.0.0"
env_logger = "0.9.0"
fake = { version = "2.4", features = ["chrono", "random_color"] }
futures = "0.3"
hmac = "0.12.1"
http = "0.2"
http-types = "2.5"
humantime-serde = "1.0"
lazy_static = "1.4.0"
log = "0.4"
mime_guess = "2.0"
nu = { version = "0.75.0", features = ["dataframe"] }
nu-protocol = { version = "0.75.0" }
nu-color-config = { version = "0.75.0" }
nu-command = { version = "0.75.0" }
nu-parser = { version = "0.75.0" }
nu-path = { version = "0.75.0" }
nu-cli = { version = "0.75.0" }
nu-engine = { version = "0.75.0" }
nu-plugin = { version = "0.75.0" }
num-bigint = "0.4"
num-traits = "0.2.14"
openssl = { version = "0.10", features = ["vendored"] }
pretty_env_logger = "0.4.0"
rand = "0.8.3"
regex = "1.5.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rpassword = "7.0.0"
rust-embed = "6.3"
rustls-pemfile = "1.0.0"
rustls-native-certs = "0.6.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.7.1"
sha2 = "0.10.2"
structopt = "0.3"
tera = "1.1"
temp-dir = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
tokio-rustls = { version = "0.23.4",  features = ["dangerous_configuration"] }
toml = "0.5"
trust-dns-resolver = { version = "0.21.2", features = ["dns-over-rustls"] }
url = "2.1"
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
dunce = "1.0.1"
envconfig = "0.10.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
nu-test-support = { version = "0.75.0"}
strum = "0.24.1"
strum_macros = "0.24.3"

[[bin]]
name = "cbsh"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1

[[test]]
name = "test"
path = "tests/integration/main.rs"
harness = false
