[package]
name = "utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-rustls = "0.26.0"
trust-dns-resolver = "0.23.2"
bytes = "1.6.0"
futures = "0.3.31"
nu-protocol = { version = "0.95.0" }
reqwest = "0.12.8"
futures-core = "0.3.31"
serde_json = "1.0.132"

